--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,7 @@ env:
     - COVERALLS_PARALLEL=true
 
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 
 cache:
   yarn: true
