--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ cache:
   directories:
     - ./node_modules
 
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.17.3
+  - export PATH="$HOME/.yarn/bin:$PATH"
+
 install:
   - yarn
 
