--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ install:
 
 script:
   - yarn test -- --no-watch --no-progress --code-coverage --browsers=ChromeHeadlessCI
-  - cat ./coverages/lcov.info | coveralls
+  - cat ./coverage/lcov.info | coveralls
 
