--- a/projects/material-community-components/tsconfig.lib.json
+++ b/projects/material-community-components/tsconfig.lib.json
@@ -3,14 +3,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
-    "target": "es2015",
     "declaration": true,
-    "inlineSources": true,
-    "types": [],
-    "lib": [
-      "dom",
-      "es2018"
-    ]
+    "inlineSources": true
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
