--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve demo --aot",
-    "build": "ng build material-community-components --prod",
+    "build": "ng build material-community-components --configuration production",
     "build:lib:scss": "scss-bundle -c scss-bundle.config.json",
     "docs": "ng deploy --base-href=https://tiaguinho.github.io/material-community-components/",
     "test": "ng test material-community-components",
@@ -21,21 +21,21 @@
     "core-js": "^3.6.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular-devkit/core": "^11.0.1",
-    "@angular/animations": "^11.0.0",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular-devkit/core": "^12.1.1",
+    "@angular/animations": "^12.1.1",
     "@angular/cdk": "^11.0.0",
-    "@angular/cli": "^11.0.1",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
+    "@angular/cli": "^12.1.1",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
+    "@angular/core": "^12.1.1",
+    "@angular/forms": "^12.1.1",
+    "@angular/language-service": "^12.1.1",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
+    "@angular/router": "^12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.2",
@@ -49,20 +49,20 @@
     "husky": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.2",
+    "ng-packagr": "^12.1.0",
     "protractor": "~7.0.0",
     "rxjs": "^6.6.3",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.0.5",
+    "typescript": "^4.3.5",
     "uglify-es": "^3.3.9",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "~0.11.2"
+    "zone.js": "~0.11.4"
   },
   "config": {
     "validate-commit-msg": {
@@ -92,7 +92,7 @@
   },
   "dependencies": {
     "scss-bundle": "^3.1.2",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "@thebespokepixel/es-tinycolor": "^2.1.1"
   },
   "resolutions": {
