--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ cache:
     - ./node_modules
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.10
-  - export PATH="$HOME/.yarn/bin:$PATH"
+  - npm install -g yarn
 
 install:
   - yarn
